# new-mongene

backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  geometry.py  health.py  pdf.py  problems.py  search_filters.py  source_list.py
backend/app/clients/: anthropic_client.py  google_client.py  openai_client.py
backend/app/config/: settings.py
backend/app/core/: auth.py  database.py
backend/app/models/: analysis.py  chat.py  geometry.py  pdf.py  problem.py  user.py
backend/app/services/: analysis_service.py  email_service.py  geometry_service.py  pdf_service.py  problem_service.py
backend/app/utils/: prompt_loader.py
backend/data/: 空間図形1.md  空間図形2.md  空間図形3.md
backend/prompts/: five_stage_initial.txt  geometry_regeneration.txt  stage_trigger.txt  three_problem_generation.txt
frontend/: middleware.ts  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/account/: page.tsx
frontend/app/(dashboard)/laboratory/: page.tsx
frontend/app/(dashboard)/problems/: page.tsx
frontend/components/features/filters/: Filters.tsx
frontend/components/features/problems/: FileUpload.tsx  (+8 more)
frontend/components/layout/: BackgroundShapes.tsx  Header.tsx
frontend/components/ui/: button.tsx  loading-modal.tsx  markdown-renderer.tsx
frontend/lib/api/: client.ts  types.ts
frontend/lib/config/: api.ts
frontend/lib/data/: units.ts
supabase/migrations/: 0001_initial_schema.sql
(+1 files in other folders)
